# ha-vsphere

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/vsphere/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event_listener.py  exceptions.py  manifest.json  permissions.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  vsphere_client.py
custom_components/vsphere/translations/: en.json
tests/: conftest.py  test_permissions.py
